styles.css
/*********************** global *********************/
/* @import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@600&display=swap");*/
:root {
  --nowplaying-progress: 75%;
}
@font-face {
  font-family: "Circular";
  src: url("https://www.bu.edu/cdn/fonts/Circular/Circular-Bold.eot");
  src: url("https://www.bu.edu/cdn/fonts/Circular/Circular-Bold.eot?#iefix")
      format("embedded-opentype"),
    url("https://www.bu.edu/cdn/fonts/Circular/Circular-Bold.woff")
      format("woff"),
    url("https://www.bu.edu/cdn/fonts/Circular/Circular-Bold.ttf")
      format("truetype");
  font-style: normal;
  font-weight: 700;
}
body {
  height: 100vh;
  margin: 0;
  background-repeat: no-repeat;
  background-attachment: fixed;
  font-family: "Circular", sans-serif;
  background: rgb(39, 77, 120);
  background: linear-gradient(
    130deg,
    rgba(39, 77, 120, 1) 0%,
    rgba(28, 54, 83, 1) 36%,
    rgba(8, 15, 23, 1) 100%
  );
  background-repeat: no-repeat;
  background-attachment: fixed;
  margin: 0px;
  padding: 0px;
  /* font-family: 'Nunito Sans', sans-serif; */
  font-family: "Circular", Arial, Helvetica, sans-serif;
  overflow: hidden;
}
.mainframe {
  max-height: calc(100vh - 90px);
  height: 100%;
  max-width: 100vw;
  width: 100%;
  display: flex;
  flex-direction: row;
  overflow-y: auto;
}
.main-content {
  max-width: calc(100vw - 232px);
  width: 100%;
  margin-left: 232px;
  padding-left: 1rem;
  overflow-y: auto;
}

/********************** Sidebar **********************/

aside {
  background-color: #040404;
  color: #b3b3b3;
  max-height: calc(100vh - 90px);
  height: 100%;
  top: 0px;
  max-width: 232px;
  width: 100%;
  display: flex;
  flex-direction: column;
  position: fixed;
  top: 0;
  left: 0;
}
.logo {
  width: auto;
  height: 4rem;
  padding-top: 2rem;
  margin-left: 2rem;
  margin-bottom: 1rem;
}

.menu {
  font-size: 0.9rem;
  height: 100%;
  display: flex;
  flex-direction: column;
}
.menu a {
  color: #b3b3b3;
  z-index: 1;
}
.menu a:hover {
  text-decoration: none;
  color: white;
  transition: 0.5s;
}

.menu ul {
  list-style-type: none;
  font-size: 0.9rem;
  margin-bottom: 0;
}
.menu ul li {
  display: flex;
  align-content: flex-start;
  font-size: 0.9rem;
  margin: 1rem auto;
}
.menu ul li > a > i {
  /* fa fonts each icon have different width, aligning Home, Search, Your Library at the same line */
  width: 40px;
}
.menu ul li > a {
  display: flex;
  align-content: center;
}
.menu ul li > a > img {
  width: 20px;
  height: 20px;
  margin-right: 1rem;
}
.menu i {
  padding-right: 20px;
}
.menu h6 {
  padding-left: 35px;
}
.menu hr {
  border: 0;
  clear: both;
  display: block;
  width: 96%;
  background-color: #b3b3b3;
  height: 1px;
  width: 80%;
  margin: 0 auto;
  margin-bottom: 5px;
}

.menu li:active::after {
  background: #afaeae50;
  color: white !important;
  border-radius: 4px;
  content: "";
  display: block;
  position: absolute;
  margin-top: -8px;
  margin-left: -8px;
  height: 2.5em;
  width: 180px;
}
.menu li:hover a {
  color: #fff;
}
.list-container {
  height: calc(100vh - 330px - 60px - 90px - 0px);
  display: flex;
  flex-direction: column;
}

.playlists {
  position: relative;
  padding-left: 15%;
  font-size: 1rem;
  padding-top: 20px;
  display: block;
  overflow-y: auto;
  white-space: nowrap;
  float: left;
  height: 100%;
  padding-bottom: 1rem;
}
.stick-to-bottom {
  height: 60px;
  width: 100%;
  background-color: black;
  text-align: center;
}
.install-btn {
  padding-top: 1.25rem;
  padding-bottom: 1.25rem;
}

/* scrollbar */
/* The emerging W3C standard
   that is currently Firefox-only */
* {
  scrollbar-width: 5vw;
  scrollbar-color: #040404 #b3b3b3;
}
*,
*::after,
*::before {
  box-sizing: content-box;
  overflow-x: hidden;
}
/* Works on Chrome/Edge/Safari */
*::-webkit-scrollbar {
  width: 0.75rem;
}
*::-webkit-scrollbar-track {
  background: transparent;
}
*::-webkit-scrollbar-thumb {
  background: rgba(70, 70, 70, 0.76);
}
*::-webkit-scrollbar-thumb:hover {
  background: rgba(110, 110, 110, 0.76);
}

/* Extra small devices (phones, 600px and down) */
@media only screen and (max-width: 600px) {
  .logo {
    width: auto;
    height: 4rem;
    display: flex;
    padding-top: 0.5;
    margin-bottom: 1rem;
    margin-left: 1rem;
  }
  .menu ul li {
    /* padding-top: 0.8rem; */
    /* font-size: 0.5rem; */
    /* margin-left: -3rem; */
  }
  /* .menu h6 {
    padding-left: 15px;
    margin-top: 1rem;
    margin-bottom: 0.3rem;
    font-size: 0.8rem;
  }*/
  .menu ul a img {
    width: 10px;
    height: 10px;
  }
  /* .playlists {
    height: 220px;
    overflow-y: auto;
  }*/
}
/* Small devices (portrait tablets and large phones, 600px and up) */
@media only screen and (min-width: 600px) {
  .logo {
    width: auto;
    height: 4rem;
    display: flex;
    padding-top: 0.5;
    margin-bottom: 1rem;
    margin-left: 1rem;
  }
  .menu ul li {
    /* padding-top: 0.8rem; */
    /* font-size: 0.5rem; */
    /* margin-left: -3rem; */
  }
  /* .menu h6 {
    padding-left: 15px;
    margin-top: 1rem;
    margin-bottom: 0.3rem;
    font-size: 0.8rem;
  }*/
  .menu ul a img {
    width: 20px;
    height: 20px;
  }
  /* .playlists {
    height: 220px;
    overflow-y: auto;
  } */

  .menu h6 .nav-tabs .nav-item.show .nav-link,
  .nav-tabs .nav-link {
    background-color: transparent;
    border: 0px;
    font-size: 10px;
    font-weight: 500;
    color: whitesmoke;
    letter-spacing: 0.1em;
    margin-bottom: 10px;
  }

  .nav-tabs .nav-item.show .nav-link,
  .nav-tabs .nav-link:after {
    display: block;
    content: "";
    margin-bottom: 10px;
    border-bottom: solid 2px limegreen;
    transform: scaleX(0);
    transition: 300ms ease-in-out;
  }

  .nav-tabs .nav-item.show .nav-link,
  .nav-tabs .nav-link:hover:after {
    transform: scaleX(0.5);
  }
}
/* ... */

